--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,9 +18,17 @@
         <nav>
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "Home",    root_path %></li>
+            <li><%= link_to "Create Event",    new_event_path %></li>
             <li><%= link_to 'Sign up', new_user_path %></li>
-            <li><%= link_to "Log in", '/login' %></li>
-          </ul>
+	          <% if logged_in? %>
+              <li>
+                <%= link_to "Log out", logout_path, method: :delete %>
+              </li>
+            </ul>
+            </li>
+            <% else %>
+              <li><%= link_to "Log in", login_path %></li>
+            <% end %>
         </nav>
       </div>
     </header>
