--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -49,3 +49,15 @@ p {
   font-size: 1.1em;
   line-height: 1.7em;
 }
+
+.table-dark {
+  font-size: 1.75em;
+  padding: 5px;
+  margin: 5px;
+}
+
+.table-elt {
+  font-size: 1.25em;
+  padding: 5px;
+  margin: 5px;
+}
