--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -17,8 +17,8 @@
   </div>
 
   <div class="field">
-    <%= f.label :time %>
-    <%= f.text_field :time %>
+    <%= f.label :date %>
+    <%= f.date_field :time %>
   </div>
 
   <div class="field">
@@ -29,11 +29,6 @@
   <div class="field">
     <%= f.label :description %>
     <%= f.text_area :description %>
-  </div>
-
-  <div class="field">
-    <%= f.label :user_id %>
-    <%= f.text_field :user_id %>
   </div>
 
   <div class="actions">
