--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -21,9 +21,12 @@
 </p>
 
 <p>
-  <strong>User:</strong>
-  <%= @event.user %>
+  <strong>Host:</strong>
+  <%= @event.user.name %>
 </p>
-
-<%= link_to 'Edit', edit_event_path(@event) %> |
+<% if logged_in? %>
+  <% if @event.user_id == current_user.id %>
+    <%= link_to 'Edit', edit_event_path(@event) %> |
+  <% end %>
+<% end %>
 <%= link_to 'Back', events_path %>
