--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,16 +17,15 @@
       <div class="container">
         <nav>
           <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to "Home",    root_path %></li>
-            <li><%= link_to "Create Event",    new_event_path %></li>
-            <li><%= link_to 'Sign up', new_user_path %></li>
+            <li><%= link_to "Home", root_path %></li>
+            <li><%= link_to "Active Users", '/users' %></li>
 	          <% if logged_in? %>
-              <li>
-                <%= link_to "Log out", logout_path, method: :delete %>
-              </li>
+              <li><%= link_to "Create Event", new_event_path %></li>
+              <li><%= link_to "Log out", logout_path, method: :delete %></li>
             </ul>
             </li>
             <% else %>
+              <li><%= link_to 'Sign up', new_user_path %></li>
               <li><%= link_to "Log in", login_path %></li>
             <% end %>
         </nav>
