--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,21 +1,24 @@
-<h1>Listing users</h1>
+<h1>Active Users</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Email</th>
-      <th colspan="3"></th>
+      <th class="table-dark bg-primary">Name</th>
+      <th class="table-dark bg-primary">Email</th>
+      <th class="table-dark bg-primary" colspan="3"></th>
     </tr>
   </thead>
 
 <% @users.each do |user| %>
   <tr>
-    <td><%= user.name %></td>
-    <td><%= user.email %></td>
-    <td><%= link_to 'Show', user %></td>
-    <td><%= link_to 'Edit', edit_user_path(user) %></td>
-    <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td class="table-elt"><%= user.name %></td>
+    <td class="table-elt"><%= user.email %></td>
+    <td class="table-elt"><%= link_to 'Show', user %></td>
+    <% if logged_in? %>
+      <% if user.id == current_user.id %>
+         <td class="table-elt"><%= link_to 'Edit', edit_user_path(user) %></td>
+      <% end %>
+    <% end %>
   </tr>
 <% end %>
 </table>
