Quick table add

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -4,7 +4,7 @@
 <% if @events.empty? %>
   <p class="table-elt">There are no events at the moment</p>
 <% else %>
-  <table>
+  <table class="table">
     <thead>
       <tr>
         <th class="table-dark bg-primary">Title</th>
